--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,16 +1,30 @@
-# APPLICATION BASE DATA
+# APPLICATION NAVIGATION
 base.url=https://store.steampowered.com/
 
+
 # APPLICATION SETTINGS
+# Age control
+ageControl.urlPart=agecheck
+ageControl.day=11
+ageControl.month=June
+ageControl.year=1999
+
+
 # Waiters
 short.element.waiter=5
 middle.element.waiter=10
 long.element.waiter=20
 
-short.page.waiter=30
-middle.page.waiter=60
-long.page.waiter=120
+short.page.waiter=15
+middle.page.waiter=30
+long.page.waiter=60
+
+short.download.waiter=10
 
 # BROWSER CONFIGURATION
 browser.name=Chrome
 #browser.name=Firefox
+
+# DATA NAMES
+downloadFile.name=SteamSetup
+downloadFile.extension=exe
