--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -5,21 +5,13 @@ base.url=https://store.steampowered.com/
 # APPLICATION SETTINGS
 # Age control
 ageControl.urlPart=agecheck
-ageControl.day=11
-ageControl.month=June
-ageControl.year=1999
 
 
 # Waiters
-short.element.waiter=5
 middle.element.waiter=10
-long.element.waiter=20
-
-short.page.waiter=15
 middle.page.waiter=30
-long.page.waiter=60
-
-short.download.waiter=10
+download.waiter=10
+language.waiter=10
 
 # BROWSER CONFIGURATION
 browser.name=Chrome
