Refactoring: waiters, setLanguage

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,17 +1,14 @@
 # APPLICATION NAVIGATION
 base.url=https://store.steampowered.com/
 
-
 # APPLICATION SETTINGS
 # Age control
 ageControl.urlPart=agecheck
-
 
 # Waiters
 middle.element.waiter=10
 middle.page.waiter=30
 download.waiter=10
-language.waiter=10
 
 # BROWSER CONFIGURATION
 browser.name=Chrome
@@ -20,3 +17,11 @@ browser.name=Chrome
 # DATA NAMES
 downloadFile.name=SteamSetup
 downloadFile.extension=exe
+
+# NAVIGATION ELEMENTS
+ageControlPage.day=11
+ageControlPage.year=1999
+
+# Language attributes
+ru=russian
+en=english
